samples/_failures_safe/1761258552_b3d240_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_851131f3.c: In function ‘main’:
./samples/SAFE/__tmp_851131f3.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("1. Add matrices\n");
      |         ^~~~~~
./samples/SAFE/__tmp_851131f3.c:150:9: error: expected declaration or statement at end of input
